# Basics-Rock-Paper-Scissor

./: README.md
source/: CMakeLists.txt  RPSgameConfig.h.in  gameLogic.cpp  main.cpp
source/Headers/: gameLogic.h
